# myproject1

./: .coverage  .env.example  .env.py  .flake8  README.md  external_api.py  generators.py  main.py  pyproject.toml  requirements.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_widget_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_decorators_py.html  z_a44f0ac069e85531_test_external_api_py.html  z_a44f0ac069e85531_test_generators_py.html  z_a44f0ac069e85531_test_masks_py.html  z_a44f0ac069e85531_test_processing_py.html  z_a44f0ac069e85531_test_utils_py.html  z_a44f0ac069e85531_test_widget_py.html
src/: README.md  csvread.py  decorators.py  external_api.py  generators.py  masks.py  processing.py  utils.py  widget.py
tests/: .gitignore  conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
